gen/LPMSParser.py
# Generated from /Users/marcosviniciusribeiroalencar/Documents/Workspace/workspace-universidade/trabalho_final_compila/LPMS.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LPMSParser ( Parser ):

    grammarFileName = "LPMS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Program'", "'input'", "'print'", "'if'", 
                     "'else'", "'while'", "'break'", "'('", "')'", "'{'", 
                     "'}'", "';'", "','", "<INVALID>", "'const'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'='", "'-'", "'%'", "<INVALID>", "'+'", "<INVALID>", 
                     "<INVALID>", "'!'" ]

    symbolicNames = [ "<INVALID>", "PROGRAM_INIT", "INPUT_FUNCTION", "PRINT_FUNCTION", 
                      "IF_CONDICIONAL", "ELSE_CONDICIONAL", "WHILE_CONDICIONAL", 
                      "BREAK", "E_PARAN", "D_PARAN", "E_CHAVES", "D_CHAVES", 
                      "FIM_DE_LINHA", "VIRGULA", "TYPE", "TYPE_CONST", "BOOLEAN", 
                      "ID", "INT", "FLOAT", "STRING", "ATRIBUICAO_OPERADOR", 
                      "MINUS_OPERADOR", "MODULO_OPERADOR", "MUL_DIV_OPERADOR", 
                      "SOMA_OPERADOR", "RELACIONAL_OPERADOR", "IGUALDADE_OPERADOR", 
                      "NEG_OPERADOR", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_programSection = 1
    RULE_block = 2
    RULE_statement = 3
    RULE_declarations = 4
    RULE_assignmentStatement = 5
    RULE_ifStatement = 6
    RULE_whileStatement = 7
    RULE_expression = 8
    RULE_logic_expr = 9
    RULE_input = 10
    RULE_varList = 11
    RULE_output = 12
    RULE_valueList = 13

    ruleNames =  [ "program", "programSection", "block", "statement", "declarations", 
                   "assignmentStatement", "ifStatement", "whileStatement", 
                   "expression", "logic_expr", "input", "varList", "output", 
                   "valueList" ]

    EOF = Token.EOF
    PROGRAM_INIT=1
    INPUT_FUNCTION=2
    PRINT_FUNCTION=3
    IF_CONDICIONAL=4
    ELSE_CONDICIONAL=5
    WHILE_CONDICIONAL=6
    BREAK=7
    E_PARAN=8
    D_PARAN=9
    E_CHAVES=10
    D_CHAVES=11
    FIM_DE_LINHA=12
    VIRGULA=13
    TYPE=14
    TYPE_CONST=15
    BOOLEAN=16
    ID=17
    INT=18
    FLOAT=19
    STRING=20
    ATRIBUICAO_OPERADOR=21
    MINUS_OPERADOR=22
    MODULO_OPERADOR=23
    MUL_DIV_OPERADOR=24
    SOMA_OPERADOR=25
    RELACIONAL_OPERADOR=26
    IGUALDADE_OPERADOR=27
    NEG_OPERADOR=28
    COMMENT=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programSection(self):
            return self.getTypedRuleContext(LPMSParser.ProgramSectionContext,0)


        def EOF(self):
            return self.getToken(LPMSParser.EOF, 0)

        def getRuleIndex(self):
            return LPMSParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LPMSParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.programSection()
            self.state = 29
            self.match(LPMSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM_INIT(self):
            return self.getToken(LPMSParser.PROGRAM_INIT, 0)

        def ID(self):
            return self.getToken(LPMSParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(LPMSParser.BlockContext,0)


        def getRuleIndex(self):
            return LPMSParser.RULE_programSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramSection" ):
                listener.enterProgramSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramSection" ):
                listener.exitProgramSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramSection" ):
                return visitor.visitProgramSection(self)
            else:
                return visitor.visitChildren(self)




    def programSection(self):

        localctx = LPMSParser.ProgramSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(LPMSParser.PROGRAM_INIT)
            self.state = 32
            self.match(LPMSParser.ID)
            self.state = 33
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def E_CHAVES(self):
            return self.getToken(LPMSParser.E_CHAVES, 0)

        def D_CHAVES(self):
            return self.getToken(LPMSParser.D_CHAVES, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LPMSParser.StatementContext)
            else:
                return self.getTypedRuleContext(LPMSParser.StatementContext,i)


        def BREAK(self, i:int=None):
            if i is None:
                return self.getTokens(LPMSParser.BREAK)
            else:
                return self.getToken(LPMSParser.BREAK, i)

        def FIM_DE_LINHA(self, i:int=None):
            if i is None:
                return self.getTokens(LPMSParser.FIM_DE_LINHA)
            else:
                return self.getToken(LPMSParser.FIM_DE_LINHA, i)

        def getRuleIndex(self):
            return LPMSParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LPMSParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(LPMSParser.E_CHAVES)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 180444) != 0):
                self.state = 39
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2, 3, 4, 6, 14, 15, 17]:
                    self.state = 36
                    self.statement()
                    pass
                elif token in [7]:
                    self.state = 37
                    self.match(LPMSParser.BREAK)
                    self.state = 38
                    self.match(LPMSParser.FIM_DE_LINHA)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(LPMSParser.D_CHAVES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStatement(self):
            return self.getTypedRuleContext(LPMSParser.AssignmentStatementContext,0)


        def declarations(self):
            return self.getTypedRuleContext(LPMSParser.DeclarationsContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(LPMSParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(LPMSParser.WhileStatementContext,0)


        def output(self):
            return self.getTypedRuleContext(LPMSParser.OutputContext,0)


        def input_(self):
            return self.getTypedRuleContext(LPMSParser.InputContext,0)


        def getRuleIndex(self):
            return LPMSParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = LPMSParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.assignmentStatement()
                pass
            elif token in [14, 15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.declarations()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.ifStatement()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.whileStatement()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.output()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 6)
                self.state = 51
                self.input_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(LPMSParser.TYPE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LPMSParser.ID)
            else:
                return self.getToken(LPMSParser.ID, i)

        def FIM_DE_LINHA(self):
            return self.getToken(LPMSParser.FIM_DE_LINHA, 0)

        def VIRGULA(self, i:int=None):
            if i is None:
                return self.getTokens(LPMSParser.VIRGULA)
            else:
                return self.getToken(LPMSParser.VIRGULA, i)

        def ATRIBUICAO_OPERADOR(self):
            return self.getToken(LPMSParser.ATRIBUICAO_OPERADOR, 0)

        def TYPE_CONST(self):
            return self.getToken(LPMSParser.TYPE_CONST, 0)

        def expression(self):
            return self.getTypedRuleContext(LPMSParser.ExpressionContext,0)


        def logic_expr(self):
            return self.getTypedRuleContext(LPMSParser.Logic_exprContext,0)


        def getRuleIndex(self):
            return LPMSParser.RULE_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarations" ):
                listener.enterDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarations" ):
                listener.exitDeclarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarations" ):
                return visitor.visitDeclarations(self)
            else:
                return visitor.visitChildren(self)




    def declarations(self):

        localctx = LPMSParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declarations)
        self._la = 0 # Token type
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.match(LPMSParser.TYPE)
                self.state = 55
                self.match(LPMSParser.ID)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 56
                    self.match(LPMSParser.VIRGULA)
                    self.state = 57
                    self.match(LPMSParser.ID)
                    self.state = 62
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 63
                self.match(LPMSParser.FIM_DE_LINHA)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                _la = self._input.LA(1)
                if not(_la==14 or _la==15):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 65
                self.match(LPMSParser.ID)
                self.state = 66
                self.match(LPMSParser.ATRIBUICAO_OPERADOR)
                self.state = 69
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 67
                    self.expression(0)
                    pass

                elif la_ == 2:
                    self.state = 68
                    self.logic_expr(0)
                    pass


                self.state = 71
                self.match(LPMSParser.FIM_DE_LINHA)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LPMSParser.ID, 0)

        def FIM_DE_LINHA(self):
            return self.getToken(LPMSParser.FIM_DE_LINHA, 0)

        def ATRIBUICAO_OPERADOR(self):
            return self.getToken(LPMSParser.ATRIBUICAO_OPERADOR, 0)

        def expression(self):
            return self.getTypedRuleContext(LPMSParser.ExpressionContext,0)


        def logic_expr(self):
            return self.getTypedRuleContext(LPMSParser.Logic_exprContext,0)


        def getRuleIndex(self):
            return LPMSParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStatement(self):

        localctx = LPMSParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(LPMSParser.ID)

            self.state = 76
            self.match(LPMSParser.ATRIBUICAO_OPERADOR)
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 77
                self.expression(0)
                pass

            elif la_ == 2:
                self.state = 78
                self.logic_expr(0)
                pass


            self.state = 81
            self.match(LPMSParser.FIM_DE_LINHA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF_CONDICIONAL(self):
            return self.getToken(LPMSParser.IF_CONDICIONAL, 0)

        def E_PARAN(self):
            return self.getToken(LPMSParser.E_PARAN, 0)

        def D_PARAN(self):
            return self.getToken(LPMSParser.D_PARAN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LPMSParser.BlockContext)
            else:
                return self.getTypedRuleContext(LPMSParser.BlockContext,i)


        def logic_expr(self):
            return self.getTypedRuleContext(LPMSParser.Logic_exprContext,0)


        def ELSE_CONDICIONAL(self):
            return self.getToken(LPMSParser.ELSE_CONDICIONAL, 0)

        def getRuleIndex(self):
            return LPMSParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = LPMSParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(LPMSParser.IF_CONDICIONAL)
            self.state = 84
            self.match(LPMSParser.E_PARAN)

            self.state = 85
            self.logic_expr(0)
            self.state = 86
            self.match(LPMSParser.D_PARAN)
            self.state = 87
            self.block()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 88
                self.match(LPMSParser.ELSE_CONDICIONAL)
                self.state = 89
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE_CONDICIONAL(self):
            return self.getToken(LPMSParser.WHILE_CONDICIONAL, 0)

        def E_PARAN(self):
            return self.getToken(LPMSParser.E_PARAN, 0)

        def logic_expr(self):
            return self.getTypedRuleContext(LPMSParser.Logic_exprContext,0)


        def D_PARAN(self):
            return self.getToken(LPMSParser.D_PARAN, 0)

        def block(self):
            return self.getTypedRuleContext(LPMSParser.BlockContext,0)


        def getRuleIndex(self):
            return LPMSParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = LPMSParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(LPMSParser.WHILE_CONDICIONAL)
            self.state = 93
            self.match(LPMSParser.E_PARAN)
            self.state = 94
            self.logic_expr(0)
            self.state = 95
            self.match(LPMSParser.D_PARAN)
            self.state = 96
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def E_PARAN(self):
            return self.getToken(LPMSParser.E_PARAN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LPMSParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LPMSParser.ExpressionContext,i)


        def D_PARAN(self):
            return self.getToken(LPMSParser.D_PARAN, 0)

        def MINUS_OPERADOR(self):
            return self.getToken(LPMSParser.MINUS_OPERADOR, 0)

        def INT(self):
            return self.getToken(LPMSParser.INT, 0)

        def FLOAT(self):
            return self.getToken(LPMSParser.FLOAT, 0)

        def ID(self):
            return self.getToken(LPMSParser.ID, 0)

        def MODULO_OPERADOR(self):
            return self.getToken(LPMSParser.MODULO_OPERADOR, 0)

        def MUL_DIV_OPERADOR(self):
            return self.getToken(LPMSParser.MUL_DIV_OPERADOR, 0)

        def SOMA_OPERADOR(self):
            return self.getToken(LPMSParser.SOMA_OPERADOR, 0)

        def getRuleIndex(self):
            return LPMSParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LPMSParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.state = 99
                self.match(LPMSParser.E_PARAN)
                self.state = 100
                self.expression(0)
                self.state = 101
                self.match(LPMSParser.D_PARAN)
                pass
            elif token in [22]:
                self.state = 103
                self.match(LPMSParser.MINUS_OPERADOR)
                self.state = 104
                self.expression(5)
                pass
            elif token in [17, 18, 19]:
                self.state = 105
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 917504) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 119
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 117
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = LPMSParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 108
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 109
                        self.match(LPMSParser.MODULO_OPERADOR)
                        self.state = 110
                        self.expression(5)
                        pass

                    elif la_ == 2:
                        localctx = LPMSParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 111
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 112
                        self.match(LPMSParser.MUL_DIV_OPERADOR)
                        self.state = 113
                        self.expression(4)
                        pass

                    elif la_ == 3:
                        localctx = LPMSParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 114
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 115
                        _la = self._input.LA(1)
                        if not(_la==22 or _la==25):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 116
                        self.expression(3)
                        pass

             
                self.state = 121
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Logic_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def E_PARAN(self):
            return self.getToken(LPMSParser.E_PARAN, 0)

        def logic_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LPMSParser.Logic_exprContext)
            else:
                return self.getTypedRuleContext(LPMSParser.Logic_exprContext,i)


        def D_PARAN(self):
            return self.getToken(LPMSParser.D_PARAN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LPMSParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LPMSParser.ExpressionContext,i)


        def RELACIONAL_OPERADOR(self):
            return self.getToken(LPMSParser.RELACIONAL_OPERADOR, 0)

        def IGUALDADE_OPERADOR(self):
            return self.getToken(LPMSParser.IGUALDADE_OPERADOR, 0)

        def NEG_OPERADOR(self):
            return self.getToken(LPMSParser.NEG_OPERADOR, 0)

        def ID(self):
            return self.getToken(LPMSParser.ID, 0)

        def BOOLEAN(self):
            return self.getToken(LPMSParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return LPMSParser.RULE_logic_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_expr" ):
                listener.enterLogic_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_expr" ):
                listener.exitLogic_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic_expr" ):
                return visitor.visitLogic_expr(self)
            else:
                return visitor.visitChildren(self)



    def logic_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LPMSParser.Logic_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_logic_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 123
                self.match(LPMSParser.E_PARAN)
                self.state = 124
                self.logic_expr(0)
                self.state = 125
                self.match(LPMSParser.D_PARAN)
                pass

            elif la_ == 2:
                self.state = 127
                self.expression(0)
                self.state = 128
                self.match(LPMSParser.RELACIONAL_OPERADOR)
                self.state = 129
                self.expression(0)
                pass

            elif la_ == 3:
                self.state = 131
                self.expression(0)
                self.state = 132
                self.match(LPMSParser.IGUALDADE_OPERADOR)
                self.state = 133
                self.expression(0)
                pass

            elif la_ == 4:
                self.state = 135
                self.match(LPMSParser.NEG_OPERADOR)
                self.state = 136
                self.logic_expr(3)
                pass

            elif la_ == 5:
                self.state = 137
                self.match(LPMSParser.ID)
                pass

            elif la_ == 6:
                self.state = 138
                self.match(LPMSParser.BOOLEAN)
                pass

